@@ -1,5 +1,7 @@
 *SVN*
 
+* Optimistic locking: revert the lock version when an update fails.  #7840 [plang]
+
 * Migrations: add_column supports custom column types.  #7742 [jsgarvin, Theory]
 
 * Load database adapters on demand. Eliminates config.connection_adapters and RAILS_CONNECTION_ADAPTERS. Add your lib directory to the $LOAD_PATH and put your custom adapter in lib/active_record/connection_adapters/adaptername_adapter.rb. This way you can provide custom adapters as plugins or gems without modifying Rails. [Jeremy Kemper]
